[gd_scene load_steps=7 format=2]

[ext_resource path="res://.import/Finding Nemo.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/game_scenes/pause.gd" type="Script" id=2]
[ext_resource path="res://.import/Montserrat-Black.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 3 )

[node name="pause" type="CanvasLayer"]

[node name="pauseControl" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="pauseControl"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.478431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="Button" parent="pauseControl"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.465
anchor_right = 0.5
anchor_bottom = 0.465
margin_left = -138.0
margin_top = -43.0245
margin_right = 138.0
margin_bottom = -2.02451
rect_min_size = Vector2( 0, 10 )
rect_pivot_offset = Vector2( 9.70321, 11.2116 )
custom_fonts/font = SubResource( 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="pauseControl"]
anchor_left = 0.5
anchor_top = 0.465
anchor_right = 0.5
anchor_bottom = 0.465
margin_left = -140.0
margin_top = 85.1265
margin_right = 136.0
margin_bottom = 126.126
rect_min_size = Vector2( 0, 10 )
rect_pivot_offset = Vector2( 9.70321, 11.2116 )
custom_fonts/font = SubResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainMenu" type="Button" parent="pauseControl"]
anchor_left = 0.5
anchor_top = 0.465
anchor_right = 0.5
anchor_bottom = 0.465
margin_left = -140.0
margin_top = 22.7635
margin_right = 136.0
margin_bottom = 63.7635
rect_min_size = Vector2( 0, 10 )
rect_pivot_offset = Vector2( 9.70321, 11.2116 )
custom_fonts/font = SubResource( 2 )
text = "Main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="pauseControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -341.825
margin_top = 146.041
margin_right = 348.175
margin_bottom = 265.041
custom_fonts/font = SubResource( 3 )
text = "GAME PAUSED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="pauseControl/continue" to="pauseControl" method="_on_continue_pressed"]
[connection signal="pressed" from="pauseControl/quit" to="pauseControl" method="_on_quit_pressed"]
[connection signal="pressed" from="pauseControl/mainMenu" to="pauseControl" method="_on_mainMenu_pressed"]
